tests/rosetta/out/Fortran/caesar-cipher-2.f90
! Generated by Mochi compiler v0.10.26 on 2025-07-16T09:28:40Z
program caesar_cipher_2
  implicit none
    integer :: i
    integer :: upper
    integer :: lower
    integer :: idx
    integer :: out
    integer :: pt
    integer :: key
    integer, dimension(5) :: arr0 = (/0,1,7,25,26/)
    integer :: i0
        character(len=100) :: s1
      integer :: ct
      character(len=100) :: s2
  main()
  contains
  recursive integer function indexOf(s,ch) result(res)
    character(len=100), intent(in) :: s
    character(len=100), intent(in) :: ch
    i = 0
    do while ((i < size(s)))
      if ((s(i+1:(i + 1)) == ch)) then
        res = i
        return
      end if
      i = (i + 1)
    end do
    res = -1
    return
  end function indexOf
  recursive integer function ord(ch) result(res)
    character(len=100), intent(in) :: ch
    upper = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ'
    lower = 'abcdefghijklmnopqrstuvwxyz'
    idx = indexOf(upper,ch)
    if ((idx >= 0)) then
      res = (65 + idx)
      return
    end if
    idx = indexOf(lower,ch)
    if ((idx >= 0)) then
      res = (97 + idx)
      return
    end if
    res = 0
    return
  end function ord
  recursive character(len=100) function chr(n) result(res)
    integer, intent(in) :: n
    upper = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ'
    lower = 'abcdefghijklmnopqrstuvwxyz'
    if ((((n >= 65) .and. n) < 91)) then
      res = upper(((n - 65))+1:(n - 64))
      return
    end if
    if ((((n >= 97) .and. n) < 123)) then
      res = lower(((n - 97))+1:(n - 96))
      return
    end if
    res = '?'
    return
  end function chr
  recursive character(len=100) function shiftRune(r,k) result(res)
    character(len=100), intent(in) :: r
    integer, intent(in) :: k
    if ((((r >= 'a') .and. r) <= 'z')) then
      res = chr(((mod((((ord(r) - 97) + k)),26)) + 97))
      return
    end if
    if ((((r >= 'A') .and. r) <= 'Z')) then
      res = chr(((mod((((ord(r) - 65) + k)),26)) + 65))
      return
    end if
    res = r
    return
  end function shiftRune
  recursive character(len=100) function encipher(s,k) result(res)
    character(len=100), intent(in) :: s
    integer, intent(in) :: k
    out = ''
    i = 0
    do while ((i < size(s)))
      out = (out + shiftRune(s((i)+1:(i + 1)),k))
      i = (i + 1)
    end do
    res = out
    return
  end function encipher
  recursive character(len=100) function decipher(s,k) result(res)
    character(len=100), intent(in) :: s
    integer, intent(in) :: k
    res = encipher(s,mod((mod((26 - k),26)),26))
    return
  end function decipher
  recursive integer function main() result(res)
    pt = 'The five boxing wizards jump quickly'
    print *, 'Plaintext: ' // pt
    do i0 = 1, 5
      key = arr0(i0)
      if ((((key < 1) .or. key) > 25)) then
        write(s1,'(G0)') key
        print *, trim('Key ' // s1) // ' invalid'
        cycle
      end if
      ct = encipher(pt,key)
      write(s2,'(G0)') key
      print *, 'Key ' // s2
      print *, '  Enciphered: ' // ct
      print *, '  Deciphered: ' // decipher(ct,key)
    end do
  end function main
end program caesar_cipher_2
